--- a/WaitChain/WaitChain.vcxproj
+++ b/WaitChain/WaitChain.vcxproj
@@ -152,6 +152,8 @@
   <ItemGroup>
     <ClInclude Include="DumpGeneration.h" />
     <ClInclude Include="ProcessEngine.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utility.h" />
@@ -169,6 +171,9 @@
     <ClCompile Include="Utility.cpp" />
     <ClCompile Include="WaitChain.cpp" />
     <ClCompile Include="WaitEngine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WaitChain.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
